Switch to apache BASE64Encoder (GEOT-2967)
git-svn-id: http://svn.osgeo.org/geotools/trunk@35068 e5c1c795-43da-0310-a71f-fac65c449510